--- a/featured.html
+++ b/featured.html
@@ -1257,26 +1257,28 @@
   </div>
 </section>
 
-<section class="relative z-10 mt-10 animate-fade-in-up">
-  <div class="max-w-5xl sm:px-6 lg:px-8 mr-auto ml-auto pr-4 pb-20 pl-4">
-    <div class="rounded-2xl border border-white/10 bg-gradient-to-br from-zinc-900/70 to-zinc-900/40 p-8 text-center backdrop-blur">
-      <h2 class="text-3xl sm:text-4xl font-semibold tracking-tight text-white">Ready to Transform Your Business?</h2>
-      <p class="mt-2 text-zinc-300">Join our successful clients and experience the power of AI-driven solutions.</p>
-      <div class="mt-6 flex flex-col sm:flex-row items-center justify-center gap-3">
-        <a href="#" data-consultation-btn class="inline-flex items-center gap-2 shadow-violet-900/25 text-sm font-semibold text-white bg-gradient-to-br from-violet-500 to-indigo-600 rounded-full pt-2.5 pr-5 pb-2.5 pl-5 shadow-lg transform-gpu transition-all duration-300 ease-out hover:-translate-y-0.5 hover:shadow-[0_12px_24px_-6px_rgba(139,92,246,0.4)] hover:scale-[1.02] active:scale-[0.98] active:duration-75">
-          Get Your Free Consultation
-          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" data-lucide="arrow-right" class="lucide lucide-arrow-right h-4 w-4"><path d="M5 12h14"></path><path d="m12 5 7 7-7 7"></path></svg>
-        </a>
-        <a href="pricing.html#pricing-plans" class="inline-flex items-center gap-2 rounded-full border border-white/10 px-5 py-2.5 text-sm font-medium text-zinc-200 hover:bg-white/5">
-          Compare plans
-          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" data-lucide="credit-card" class="lucide lucide-credit-card h-4 w-4"><rect width="20" height="14" x="2" y="5" rx="2"></rect><line x1="2" x2="22" y1="10" y2="10"></line></svg>
-        </a>
+
+
+
+    <!-- Transform Section (copied from index.html) -->
+    <section class="relative z-10 mt-10 animate-fade-in-up">
+      <div class="max-w-5xl sm:px-6 lg:px-8 mr-auto ml-auto pr-4 pb-20 pl-4">
+        <div class="rounded-2xl border border-white/10 bg-gradient-to-br from-zinc-900/70 to-zinc-900/40 p-8 text-center backdrop-blur">
+          <h2 class="text-3xl sm:text-4xl font-semibold tracking-tight text-white">Transform Your Business Today</h2>
+          <p class="mt-2 text-zinc-300">Expert AI automation and custom software solutions. Get started with a free consultation.</p>
+          <div class="mt-6 flex flex-col sm:flex-row items-center justify-center gap-3">
+            <a href="#" data-quote-btn class="inline-flex items-center gap-2 shadow-violet-900/25 text-sm font-semibold text-white bg-gradient-to-br from-violet-500 to-indigo-600 rounded-full pt-2.5 pr-5 pb-2.5 pl-5 shadow-lg transform-gpu transition-all duration-300 ease-out hover:-translate-y-0.5 hover:shadow-[0_12px_24px_-6px_rgba(139,92,246,0.4)] hover:scale-[1.02] active:scale-[0.98] active:duration-75">
+              Get a Quote
+              <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" data-lucide="calculator" class="lucide lucide-calculator h-4 w-4"><rect width="16" height="20" x="4" y="2" rx="2"></rect><line x1="8" x2="16" y1="6" y2="6"></line><line x1="16" x2="16" y1="14" y2="18"></line><path d="M16 10h.01"></path><path d="M12 10h.01"></path><path d="M8 10h.01"></path><path d="M12 14h.01"></path><path d="M8 14h.01"></path><path d="M12 18h.01"></path><path d="M8 18h.01"></path></svg>
+            </a>
+            <a href="pricing.html#pricing-plans" class="inline-flex items-center gap-2 rounded-full border border-white/10 px-5 py-2.5 text-sm font-medium text-zinc-200 hover:bg-white/5">
+              Compare plans
+              <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" data-lucide="credit-card" class="lucide lucide-credit-card h-4 w-4"><rect width="20" height="14" x="2" y="5" rx="2"></rect><line x1="2" x2="22" y1="10" y2="10"></line></svg>
+            </a>
+          </div>
+        </div>
       </div>
-    </div>
-  </div>
-</section>
-
-
+    </section>
     <!-- Footer -->
     <footer class="relative z-10 border-t border-white/10">
       <div class="max-w-7xl sm:px-6 lg:px-8 mr-auto ml-auto pt-10 pr-4 pb-10 pl-4">
@@ -1456,6 +1458,56 @@
           document.addEventListener('keydown', function(e) {
             if (e.key === 'Escape' && !consultationModal.classList.contains('hidden')) {
               closeModal();
+            }
+          });
+        }
+
+        // Initialize quote modal
+        const quoteModal = document.getElementById('quote-modal');
+        const closeQuoteModalBtn = document.getElementById('close-quote-modal');
+        const quoteBtns = document.querySelectorAll('[data-quote-btn]');
+
+        if (quoteModal && closeQuoteModalBtn) {
+          function openQuoteModal() {
+            quoteModal.classList.remove('hidden');
+            requestAnimationFrame(() => {
+              quoteModal.classList.add('opacity-100');
+              quoteModal.querySelector('div').classList.remove('scale-95');
+            });
+            document.body.style.overflow = 'hidden';
+          }
+
+          function closeQuoteModal() {
+            quoteModal.classList.remove('opacity-100');
+            quoteModal.querySelector('div').classList.add('scale-95');
+            setTimeout(() => {
+              quoteModal.classList.add('hidden');
+              document.body.style.overflow = '';
+            }, 300);
+          }
+
+          // Add click handlers to all quote buttons
+          quoteBtns.forEach(btn => {
+            btn.addEventListener('click', function(e) {
+              e.preventDefault();
+              openQuoteModal();
+            });
+          });
+
+          // Close button handler
+          closeQuoteModalBtn.addEventListener('click', closeQuoteModal);
+
+          // Click outside modal to close
+          quoteModal.addEventListener('click', function(e) {
+            if (e.target === quoteModal) {
+              closeQuoteModal();
+            }
+          });
+
+          // Escape key to close
+          document.addEventListener('keydown', function(e) {
+            if (e.key === 'Escape' && !quoteModal.classList.contains('hidden')) {
+              closeQuoteModal();
             }
           });
         }
@@ -1695,6 +1747,107 @@
   <script src="components/style-optimizer.js" defer></script>
   <script src="components/animation-observer.js" defer></script>
   <script src="components/custom-cursor.js" defer></script>
+
+    <!-- Quote Modal -->
+    <div id="quote-modal" class="fixed inset-0 bg-black/70 backdrop-blur-md hidden z-[100] flex items-center justify-center p-4 opacity-0 transition-opacity duration-150">
+      <div class="bg-[#0a0a12] rounded-2xl max-w-4xl w-full max-h-[85vh] overflow-y-auto relative shadow-2xl border border-white/10 transform transition-all duration-150 ease-out scale-95">
+        <button id="close-quote-modal" class="absolute top-4 right-4 text-zinc-400 hover:text-white z-[110]">
+          <svg class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12" />
+          </svg>
+        </button>
+        <div id="quote-form" class="p-6 md:p-8 bg-transparent border-none rounded-none mt-0">
+          <div class="grid grid-cols-1 lg:grid-cols-3 gap-6">
+            <div class="space-y-4">
+              <div class="inline-flex items-center gap-2 rounded-full bg-emerald-400/10 text-emerald-300 ring-1 ring-emerald-300/20 px-2.5 py-1 text-xs">
+                <span class="h-1.5 w-1.5 rounded-full bg-emerald-400 animate-pulse"></span>
+                Get Instant Quote
+              </div>
+              <h4 class="text-white font-semibold tracking-tight">Request a Custom Quote</h4>
+              <ul class="space-y-2 text-sm text-neutral-300">
+                <li class="flex items-start gap-2">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" data-lucide="check" class="lucide lucide-check w-4 h-4 text-emerald-400 mt-0.5"><path d="M20 6 9 17l-5-5"></path></svg>
+                  <span>Tailored pricing for your specific needs</span>
+                </li>
+                <li class="flex items-start gap-2">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" data-lucide="check" class="lucide lucide-check w-4 h-4 text-emerald-400 mt-0.5"><path d="M20 6 9 17l-5-5"></path></svg>
+                  <span>Detailed project breakdown and timeline</span>
+                </li>
+                <li class="flex items-start gap-2">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" data-lucide="check" class="lucide lucide-check w-4 h-4 text-emerald-400 mt-0.5"><path d="M20 6 9 17l-5-5"></path></svg>
+                  <span>Expert recommendations included</span>
+                </li>
+              </ul>
+            </div>
+            <form id="quote-request-form" class="lg:col-span-2 flex flex-col gap-3">
+              <div>
+                <label for="quote-name" class="block text-xs font-medium text-white/80 mb-1">Your name</label>
+                <input id="quote-name" name="name" type="text" required placeholder="Jane Doe" class="w-full placeholder-white/40 outline-none focus:ring-2 focus:ring-violet-400/60 focus:border-violet-300 transition text-sm text-white bg-white/10 border-white/10 border rounded-xl pt-2.5 pr-3 pb-2.5 pl-3">
+              </div>
+              <div>
+                <label for="quote-email" class="block text-xs font-medium text-white/80 mb-1">Email</label>
+                <input id="quote-email" name="email" type="email" required placeholder="jane@company.com" class="w-full placeholder-white/40 outline-none focus:ring-2 focus:ring-violet-400/60 focus:border-violet-300 transition text-sm text-white bg-white/10 border-white/10 border rounded-xl pt-2.5 pr-3 pb-2.5 pl-3">
+              </div>
+              <div>
+                <label for="quote-company" class="block text-xs font-medium text-white/80 mb-1">Company</label>
+                <input id="quote-company" name="company" type="text" placeholder="Acme Inc." class="w-full placeholder-white/40 outline-none focus:ring-2 focus:ring-violet-400/60 focus:border-violet-300 transition text-sm text-white bg-white/10 border-white/10 border rounded-xl pt-2.5 pr-3 pb-2.5 pl-3">
+              </div>
+              <div class="mt-1">
+                <label for="quote-service" class="block text-xs font-medium text-white/80 mb-0.5">Service needed</label>
+                <select id="quote-service" name="service" class="w-full appearance-none outline-none focus:ring-2 focus:ring-violet-400/60 focus:border-violet-300 transition text-sm text-white bg-white/10 border-white/10 border rounded-xl pt-2.5 pr-3 pb-2.5 pl-3">
+                  <option class="bg-neutral-900" value="ai-automation">AI Automation</option>
+                  <option class="bg-neutral-900" value="mobile-app">Mobile App Development</option>
+                  <option class="bg-neutral-900" value="web-app">Web Application</option>
+                  <option class="bg-neutral-900" value="custom-software">Custom Software</option>
+                  <option class="bg-neutral-900" value="ai-chatbot">AI Chatbot</option>
+                  <option class="bg-neutral-900" value="ai-integration">AI Integration</option>
+                </select>
+              </div>
+              <div>
+                <label for="quote-budget-amount" class="block text-xs font-medium text-white/80 mb-1">Your Budget</label>
+                <div class="flex gap-2">
+                  <div class="flex-1">
+                    <input id="quote-budget-amount" name="budget_amount" type="number" placeholder="50000" min="1000" step="1000" class="w-full outline-none focus:ring-2 focus:ring-violet-400/60 focus:border-violet-300 transition text-sm text-white bg-white/10 border-white/10 border rounded-xl pt-2.5 pr-3 pb-2.5 pl-3" required>
+                  </div>
+                  <div class="w-20">
+                    <select id="quote-budget-currency" name="budget_currency" class="w-full appearance-none outline-none focus:ring-2 focus:ring-violet-400/60 focus:border-violet-300 transition text-sm text-white bg-white/10 border-white/10 border rounded-xl pt-2.5 pr-3 pb-2.5 pl-3">
+                      <option class="bg-neutral-900" value="PKR">PKR</option>
+                      <option class="bg-neutral-900" value="USD" selected>USD</option>
+                    </select>
+                  </div>
+                </div>
+                <div class="text-xs text-neutral-400 mt-1">Enter your budget amount (minimum $1,000)</div>
+              </div>
+              <div>
+                <label for="quote-timeline" class="block text-xs font-medium text-white/80 mb-1">Timeline</label>
+                <select id="quote-timeline" name="timeline" class="w-full appearance-none outline-none focus:ring-2 focus:ring-violet-400/60 focus:border-violet-300 transition text-sm text-white bg-white/10 border-white/10 border rounded-xl pt-2.5 pr-3 pb-2.5 pl-3">
+                  <option class="bg-neutral-900" value="asap">ASAP</option>
+                  <option class="bg-neutral-900" value="1-3-months">1-3 months</option>
+                  <option class="bg-neutral-900" value="3-6-months">3-6 months</option>
+                  <option class="bg-neutral-900" value="6-months-plus">6+ months</option>
+                </select>
+              </div>
+              <div class="sm:col-span-2">
+                <label for="quote-requirements" class="block text-xs font-medium text-white/80 mb-1">Project requirements</label>
+                <textarea id="quote-requirements" name="requirements" rows="4" placeholder="Describe your project goals, specific features needed, and any other requirements." class="w-full placeholder-white/40 outline-none focus:ring-2 focus:ring-violet-400/60 focus:border-violet-300 transition text-sm text-white bg-white/10 border-white/10 border rounded-xl pt-2.5 pr-3 pb-2.5 pl-3"></textarea>
+              </div>
+              <div class="sm:col-span-2 flex flex-col sm:flex-row items-start sm:items-center justify-between gap-3">
+                <div class="flex gap-2 text-xs text-white/70 items-center">
+                  <input id="quote-newsletter" name="newsletter" type="checkbox" class="h-4 w-4 rounded bg-white/10 border-white/20 text-violet-400 focus:ring-violet-400/60">
+                  <label for="quote-newsletter">Subscribe to our newsletter</label>
+                </div>
+                <div class="flex items-center gap-2">
+                  <button type="submit" class="inline-flex gap-2 ring-1 ring-violet-300 hover:bg-violet-300 transition text-sm font-medium text-neutral-900 bg-violet-400 rounded-xl pt-2.5 pr-4 pb-2.5 pl-4 shadow items-center">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" data-lucide="calculator" class="lucide lucide-calculator w-4 h-4"><rect width="16" height="20" x="4" y="2" rx="2"></rect><line x1="8" x2="16" y1="6" y2="6"></line><line x1="16" x2="16" y1="14" y2="18"></line><path d="M16 10h.01"></path><path d="M12 10h.01"></path><path d="M8 10h.01"></path><path d="M12 14h.01"></path><path d="M8 14h.01"></path><path d="M12 18h.01"></path><path d="M8 18h.01"></path></svg>
+                    Get Quote
+                  </button>
+                </div>
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
 
 
 </body></html>
